[package]
name = "jec"
version = "0.1.0"
authors = ["guoxbin <guoxbin@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecies = "0.1.4"
jni = "0.16.0"
hex = "0.4.2"
signatory = "0.17"
signatory-secp256k1 = "0.17.0"
